--- a/views/loginSuccessView.ejs
+++ b/views/loginSuccessView.ejs
@@ -1,4 +1,3 @@
-<!-- loginSuccessView.ejs -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -42,11 +41,19 @@
         font-size: 18px;
         margin-bottom: 20px;
       }
+
+      img {
+        max-width: 20%;
+        height: auto;
+      }
     </style>
   </head>
+
   <body>
     <div class="container">
-      <h1><%= title %></h1>
+      <img src="scheduleHelperLogo.jpg" alt="logo" />
+
+      <h1>스케줄 헬퍼 (Schedule Helper)</h1>
       <p><%= message %></p>
     </div>
   </body>
